PP-MS-EClaims/PP-MS-EClaims-DevOps/k8s/k8s-pp-ms-eclaims-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pp-ms-eclaims-web
  labels:
    app: pp-ms-eclaims-web
    department: eclaims
spec:
  selector:
    matchLabels:
      app: pp-ms-eclaims-web
      department: eclaims
  replicas: 3
  template:
    metadata:
      labels:
        app: pp-ms-eclaims-web
        department: eclaims
    spec:
      containers:
      - name: pp-ms-eclaims-web
        image: "provider-proposal/ms-eclaims-maven"
        imagePullPolicy: Never
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 8000
