PP-MS-EClaims/PP-MS-EClaims-DevOps/k8s/k8s-pp-ms-eclaims-web-loadbal-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: pp-ms-eclaims-web-loadbalancer-dev
  labels:
    app: pp-ms-eclaims-web
    department: eclaims
spec:
  type: LoadBalancer
  selector:
    app: pp-ms-eclaims-web
    department: eclaims
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8000
  clusterIP: 10.96.0.80
status:
  loadBalancer:
    ingress:
      - ip: 192.0.2.127
