PP-MS-EClaims/PP-MS-EClaims-DevOps/k8s/k8s-pp-ms-eclaims-web-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: pp-ms-eclaims-web-nodeport
  labels:
    app: pp-ms-eclaims-web
    department: eclaims
spec:
  type: NodePort
  selector:
    app: pp-ms-eclaims-web
    department: eclaims
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30007
