PP-MS-EClaims/PP-MS-EClaims-DevOps/k8s/k8s-pp-ms-eclaims-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pp-ms-eclaims-web
spec:
  defaultBackend:
      service:
        name: pp-ms-eclaims-web
        port: 
          number: 8000
